# cageclaw

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/container/: docker.rs  mod.rs  runtime.rs
src-tauri/src/database/: mod.rs
src-tauri/src/proxy/: mod.rs
src/components/: BlockedToast.tsx  ContainerControls.tsx  SetupWizard.tsx  Sidebar.tsx  StatusCard.tsx
src/styles/: global.css
src/views/: AgentView.tsx  Dashboard.tsx  FilesView.tsx  NetworkView.tsx  SettingsView.tsx
